samples/_failures_safe/1761153012_813113_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_fc4073ed.c: In function ‘parse_string’:
./samples/SAFE/__tmp_fc4073ed.c:174:40: error: expected ‘)’ at end of input
  174 |         strncpy(token->value, tokenizer
      |                ~                       ^
      |                                        )
./samples/SAFE/__tmp_fc4073ed.c:174:9: error: too few arguments to function ‘strncpy’
  174 |         strncpy(token->value, tokenizer
      |         ^~~~~~~
In file included from /usr/include/features.h:502,
                 from /usr/include/x86_64-linux-gnu/bits/libc-header-start.h:33,
                 from /usr/include/stdio.h:28,
                 from ./samples/SAFE/__tmp_fc4073ed.c:2:
/usr/include/x86_64-linux-gnu/bits/string_fortified.h:92:1: note: declared here
   92 | __NTH (strncpy (char *__restrict __dest, const char *__restrict __src,
      | ^~~~~
./samples/SAFE/__tmp_fc4073ed.c:174:9: error: expected declaration or statement at end of input
  174 |         strncpy(token->value, tokenizer
      |         ^~~~~~~
./samples/SAFE/__tmp_fc4073ed.c:174:9: error: expected declaration or statement at end of input
